infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simulyn
  labels:
    name: simulyn
